--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,8 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th></th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,6 +19,23 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td>
+          <% if book.favorited_by?(current_user) %>
+            <%= link_to book_favorites_path(book),class:"text-danger",method: :delete do %>
+              <i class="fas fa-heart"></i>
+              <%= book.favorites.count %>
+            <% end %>
+            </div>
+          <% else %>
+            <%= link_to book_favorites_path(book),class:"text-primary",method: :post do %>
+              <i class="fas fa-heart"></i>
+              <%= book.favorites.count %>
+            <% end %>
+          <% end %>
+        </td>
+        <td>
+
+        </td>
       </tr>
     <% end %>
   </tbody>
