--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,21 +20,22 @@
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         <td>
+          <!--いいね機能-->
           <% if book.favorited_by?(current_user) %>
             <%= link_to book_favorites_path(book),class:"text-danger",method: :delete do %>
               <i class="fas fa-heart"></i>
               <%= book.favorites.count %>
-            <% end %>
-            </div>
+              <% end %>
           <% else %>
             <%= link_to book_favorites_path(book),class:"text-primary",method: :post do %>
               <i class="fas fa-heart"></i>
               <%= book.favorites.count %>
-            <% end %>
+              <% end %>
           <% end %>
         </td>
         <td>
-
+          <!--コメント数の表示-->
+          コメント数:<%= book.book_comments.count %>
         </td>
       </tr>
     <% end %>
