--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
       <h2>User info</h2>
       <%= render 'users/info',user: @user%>
       <h2 class="mt-3">New book</h2>
-      <%= render 'books/form', book: @book_2 %>
+      <%= render 'books/form', book: @book_new %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -17,6 +17,24 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>
+            <!--いいね機能-->
+              <% if @book.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(@book),class:"text-danger",method: :delete do %>
+                  <i class="fas fa-heart"></i>
+                  <%= @book.favorites.count %>
+                <% end %>
+              <% else %>
+                <%= link_to book_favorites_path(@book),class:"text-primary",method: :post do %>
+                  <i class="fas fa-heart"></i>
+                  <%= @book.favorites.count %>
+                <% end %>
+              <% end %>
+          </td>
+          <td>
+            <!--コメント数の表示-->
+            コメント数:<%= @book.book_comments.count %>
+          </td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
@@ -26,6 +44,36 @@
           <% end %>
         </tr>
       </table>
+        <!--投稿コメント表示欄-->
+        <% @book.book_comments.each do |book_comment| %>
+          <table>
+            <tbody>
+              <tr>
+                <th>
+                  <%= link_to user_path(@book) do %>
+                    <%= image_tag book_comment.user.get_profile_image,size: '50x50'%><br>
+                    <%= book_comment.user.name %>
+                  <% end %>
+                </th>
+                <th class="w-100">
+                    <p><%= book_comment.comment %></p>
+                </th>
+                <th>
+                  <% if book_comment.user_id == current_user.id %>
+                    <%= link_to "Destroy",book_book_comment_path(book_comment.book,book_comment),class: "text-center btn btn-danger",method: :delete %>
+                  <% end %>
+                </th>
+              </tr>
+            </tbody>
+          </table>
+        <% end %>
+      <!--コメント投稿欄-->
+      <div class="form-field">
+        <%= form_with model:[@book,@book_comment],local:true do |f| %>
+          <%= f.text_area :comment,class: "form-control my-3" %>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
