--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='row'>
-    <h1>Followers Users</h1>
+    <h1>Follower Users</h1>
   </div>
   <div class='row'>
     <% if @users.count == 0 %>
