[Update] フォロー/フォロワー機能に対する自分なりの解釈をコメントとして、追記

--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -10,3 +10,11 @@
     <% end %>
   </div>
 </div>
+
+<!--「ログインユーザをフォローしているユーザ一覧」を取得する流れ-->
+<!--1.ログインユーザのidを取得する。                            -->
+<!--2.フォローされるユーザから見た中間テーブル
+      (Reverse_on_relationships)から、その中間テーブルの
+      FK(followed_id)＝ログインユーザidとなるレコードを全て取得 -->
+<!--3. 2.で取得したレコードのfollower_idを元に、フォローする人  -->
+<!--　の情報（follower:User)を順次followersに格納　　　　　　　 -->
