[Add] 検索機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,16 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <!--ナビゲーションバー-->
     <%= render 'layouts/header' %>
+    <!--検索フォーム-->
+    <% if user_signed_in? %>
+      <%= render 'searches/form' %>
+    <% end %>
       <main>
+        <!--エラーメッセージの表示-->
         <p id="notice"><%= notice %></p>
+        <!--個別のhtml表示箇所:yield-->
         <%= yield %>
       </main>
     <%= render 'layouts/footer' %>
