--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,18 +19,8 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           <td>
-            <!--いいね機能-->
-              <% if @book.favorited_by?(current_user) %>
-                <%= link_to book_favorites_path(@book),class:"text-danger",method: :delete do %>
-                  <i class="fas fa-heart"></i>
-                  <%= @book.favorites.count %>
-                <% end %>
-              <% else %>
-                <%= link_to book_favorites_path(@book),class:"text-primary",method: :post do %>
-                  <i class="fas fa-heart"></i>
-                  <%= @book.favorites.count %>
-                <% end %>
-              <% end %>
+            <!--いいねボタン-->
+            <%= render 'favorites/favorite-btn',book: @book %>
           </td>
           <td>
             <!--コメント数の表示-->
