--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -19,9 +19,9 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td id="favorite-btn-#{book.id}">
-          <!--いいねボタン-->
-          <%= render 'favorites/favorite-btn',book: book %>
+        <td id="favorite-btn-<%= book.id %>">
+            <!--いいねボタン-->
+            <%= render 'favorites/favorite-btn',book: book %>
         </td>
         <td>
           <!--コメント数の表示-->
