--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,7 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>
+          <td id="favorite-btn-<%= @book.id %>">
             <!--いいねボタン-->
             <%= render 'favorites/favorite-btn',book: @book %>
           </td>
