--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,2 +1,3 @@
 <!--いいね保存のためのAjax対応-->
-$("#favorite-btn-#{@book.id}").html("<%= j(render 'favorites/favorite-btn', book: @book) %>");
+  $("#favorite-btn-<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite-btn', locals: {book: @book}) %>");
+
