--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,2 +1,2 @@
 <!--いいね削除のためのAjax対応-->
-$("#favorite-btn-#{@book.id}").html("<%= j(render 'favorites/favorite-btn', book: @book) %>");
+ $("#favorite-btn-<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite-btn', locals: {book: @book}) %>");
