[Fix]　非同期処理の修正Update

--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,3 +1,2 @@
-<!--いいね保存のためのAjax対応-->
-  $("#favorite-btn-<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite-btn', locals: {book: @book}) %>");
-
+<!--いいね追記機能のためのAjax対応-->
+ $("#favorite-btn-<%= @book.id %>").html("<%= j(render partial: 'favorites/favorite-btn', locals: {book: @book}) %>");
