--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,39 +37,16 @@
           <% end %>
         </tr>
       </table>
-        <!--投稿コメント表示欄-->
-        <% @book.book_comments.each do |book_comment| %>
-          <table>
-            <tbody>
-              <tr>
-                <th>
-                  <%= link_to user_path(@book) do %>
-                    <%= image_tag book_comment.user.get_profile_image,size: '50x50'%><br>
-                    <%= book_comment.user.name %>
-                  <% end %>
-                </th>
-                <th class="w-100">
-                    <p><%= book_comment.comment %></p>
-                </th>
-                <th>
-                  <!--コメント削除ボタン-->
-                  <% if book_comment.user_id == current_user.id %>
-                    <%= link_to "Destroy",book_book_comment_path(book_comment.book,book_comment),class: "text-center btn btn-danger",method: :delete %>
-                    <!--質問結果-->
-                    <!--１つ目の変数「book_comment.book」部分は、投稿詳細画面に表示されている-->
-                    <!--本のidが入力されればよいので、今回の場合は「book_comment」や「@book」で代用可能-->
-                  <% end %>
-                </th>
-              </tr>
-            </tbody>
-          </table>
-        <% end %>
-      <!--コメント投稿欄-->
-      <div class="form-field">
-        <%= form_with model:[@book,@book_comment],local:true do |f| %>
-          <%= f.text_area :comment,class: "form-control my-3" %>
-          <%= f.submit "送信" %>
-        <% end %>
+      <div id="comments-area">
+        <!--投稿コメント一覧(部分テンプレート）-->
+        <%= render 'book_comments/index', book: @book %>
+      </div>
+      <div id="new-comment">
+      <!--コメント投稿フォーム（部分テンプレート）-->
+      <%= form_with model:[@book,@book_comment] do |f| %>
+        <%= f.text_area :comment,class: "form-control my-3" %>
+        <%= f.submit "送信" %>
+      <% end %>
       </div>
     </div>
   </div>
