--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
           </td>
           <td>
             <!--コメント数の表示-->
-            コメント数:<%= @book.book_comments.count %>
+            コメント数:<span id="book-comments-count"><%= @book.book_comments.count %></span>
           </td>
           <% if @book.user == current_user %>
             <!--投稿本の編集-->
