--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,27 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-  		<h1>Editing Book</h1>
-  		<%= render 'form', book: @book %>
-  		<%= link_to 'Show', @book, class: "book_#{@book.id}" %> |
-  		<%= link_to 'Back', books_path, class: "back" %>
+      <h1>Editing Book</h1>
+      <%= form_with model: @book,local:true do |f| %>
+        <!--本のタイトルを入力-->
+        <div class="form-group">
+          <%= f.label :title %>
+          <%= f.text_field :title, class: 'form-control book_title' %>
+        </div>
+        <!--本の感想を入力-->
+        <div class="form-group">
+          <%= f.label :opinion %>
+          <%= f.text_area :body, class: 'form-control book_body' %>
+        </div>
+        <!--星レビューを入力-->
+        <%= render 'read_score',book: @book%>
+        <!--投稿ボタン-->
+        <div class="form-group">
+          <%= f.submit class: 'btn btn-success' %>
+        </div>
+  		  <%= link_to 'Show', @book, class: "book_#{@book.id}" %> |
+  		  <%= link_to 'Back', books_path, class: "back" %>
+  	  <% end %>
+    </div>
   </div>
 </div>
