--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  <!--カテゴリタグを入力-->
+  <div class="form-group">
+    <%= f.label "Tag" %>
+    <%= f.text_field :tag_name, class: 'form-control book_tag_name' %>
+  </div>
   <!--星レビューを入力-->
   <div class="form-group mt-3">
      <div class="score-input", id="star">
